# trainLLM

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: common.h
src/operator/: conv.cuh  dot.cuh  elementwise.cuh  layer_norm.cuh  relu.cuh  softmax.cuh
src/operator/flash_attention/: README.md  attention.cu  attention.h  attention.md
src/utils/: Makefile  matrix.cu  matrix.md  nsight.sh  reduce.cu  reduce.cuh  scan.cu  sort.cu  time_recorder.h  util.h
